Fixed 2 issues
1. on the startpage, "more Information" button is too narrow when using mobile view.
2. When not logged in (in all pages) and using mobile view, there is a small gap on top of the page with --> text.

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/custom.css
@@ -124,7 +124,9 @@
     border-radius: 6px;
 }
 
-
+.btn .btn-border{
+	width:auto;
+}
 
 .btn-border {
     border: 2px solid #fff;
